# paceship

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
notebooks/: blue-marble.ipynb
scripts/: setup.sh
src/paceship/: __init__.py
